# software

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  map.csv  requirements.txt  ssh-start.bash
giu_f1tenth_ws/src/giu_f1tenth_messages/: CMakeLists.txt  package.xml  setup.cfg  setup.py
giu_f1tenth_ws/src/lidar_obj_detection/: setup.py
giu_f1tenth_ws/src/lidar_object_detection/: lidar_objdet.txt
giu_f1tenth_ws/src/mapping/: package.xml  setup.py
giu_f1tenth_ws/src/pure_pursuit_node/: package.xml  setup.cfg  setup.py
giu_f1tenth_ws/src/sensing/: package.xml  setup.py
giu_f1tenth_ws/src/trajectory_planning/: package.xml  setup.py
libs/reference_line_generation/: mid_line_generator.py  track_border_generator.py
scripts/: clean_map.py  find_max_look_ahead_distance.py  mid_line_generator.py  odom_acceleration.py  realtime_modifie_realsense.py  reference_line_generator.py  save_map_and_send.py  ssh-start.sh
src/control/control_gateway/: LICENSE  package.xml  setup.cfg  setup.py
src/control/kayn_controller/: CMakeLists.txt  package.xml  setup.py
src/control/kayn_controller/config/: kayn_params.yaml
src/control/kayn_controller/kayn_controller/: kayn_node.py
src/control/kayn_controller/kayn_controller/controllers/: bicycle_model.py  lqr.py  mpc.py  stanley.py
src/control/kayn_controller/kayn_controller/supervisor/: curvature.py  fsm.py  state_handoff.py
src/control/kayn_controller/launch/: kayn.launch.py
src/control/kayn_controller/math/: lqr.md  mpc.md  stanley.md
src/control/kayn_controller/scripts/: kayn_node
src/control/kayn_controller/simulation/: plot.py  sim.py  track.py
src/control/kayn_controller/tests/: test_bicycle_model.py  test_curvature.py  test_fsm.py  test_lqr.py  test_mpc.py  test_stanley.py
src/decision/: package.xml  setup.cfg  setup.py
src/decision/config/: fsm_params.yaml
src/decision/launch/: fsm_node.launch.py
src/giu_f1t_bringup/: README.md
src/giu_f1t_interfaces/: CMakeLists.txt  README.md  package.xml
src/giu_f1t_utils/: README.md
src/planning/giu_f1t_behavior_tree/: CMakeLists.txt  package.xml
src/planning/giu_f1t_behavior_tree/bt_xml/: behavior_tree.xml
src/planning/giu_f1t_behavior_tree/include/giu_f1t_behavior_tree/: AStarPathGeneratorNode.hpp  EmergencyStopNode.hpp  GapFollowerNode.hpp  ObjectDetectionNode.hpp  OptimizedPathNode.hpp  PurePursuitNode.hpp  SafetyNode.hpp  WatchDogNode.hpp
src/planning/giu_f1t_behavior_tree/launch/: bt.launch.py
src/planning/giu_f1t_behavior_tree/src/: bt_main.cpp
src/slam/mapping/: setup.py
(+49 files in other folders)
