<?xml version="1.0"?>
<package format="3">
  <name>kayn_controller</name>
  <version>1.0.0</version>
  <description>KAYN hybrid LQR+MPC+Stanley path-tracking controller for F1TENTH</description>
  <maintainer email="mohammed@azab.io">Mohammed Azab</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>giu_f1t_interfaces</depend>
  <test_depend>pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
