<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kayn_controller</name>
  <version>1.0.0</version>
  <description>KAYN hybrid LQR+MPC+Stanley path-tracking controller for F1TENTH</description>
  <maintainer email="mohammed@azab.io">Mohammed Azab</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>giu_f1t_interfaces</depend>
  <exec_depend>tf_transformations</exec_depend>
  <test_depend>pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
