<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>giu_f1t_behavior_tree</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fam@awadlouis.com">Fam Shihata</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>behavior_tree_cpp_v3</depend>
  <depend>giu_f1t_interfaces</depend>
  <depend>gap_follower</depend>
  <depend>pure_pursuit</depend>
  <depend>yolo_detector</depend>
  <depend>bt_manager</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
